<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Calligraph!</string>
    <string name="app_name">云记事</string>
    <string name="dateSliderTitle">您选择的日期：</string>
    <string name="cloud">网络存储</string>
    <string name="local">本地存储</string>
    <string name="ink_spread">阴墨速度</string>
    <string name="onto_screen_time">上屏时间</string>
    <string name="auto_save_time">自动保存时间</string>
    <string name="auto_upload_time">自动上传时间</string>
    
    <string name="display">字体样式</string>
    <string name="display_byWidth">宽度保持一致</string>
    <string name="display_byHeight">高度保持一致</string>
    
    <string name="button_add">增加</string>
    <string name="button_delete">减小</string>
    <string name="display_parameters">排版参数</string>
    <string name="display_parameters_word_pad">字间距</string>
    <string name="display_parameters_base_pad">基准线</string>
    
    <string name="cali">毛笔动画效果</string>
    <string name="cali_a">打开</string>
    <string name="cali_b">关闭</string>
    
</resources>