<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp" >
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ink_spread"
        />
    
	<SeekBar
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/ink_spread_seekbar"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
	    android:max="100"
	    android:progress="50"
	    >
	</SeekBar>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:id="@+id/onto_screen_textview"
        android:text="@string/onto_screen_time"
        />
    
	<SeekBar
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/onto_screen_seekbar"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
	    android:max="100"
	    android:progress="50"
	    >
	</SeekBar>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_save_time"
        />
	<SeekBar
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/auto_save_seekbar"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
	    android:max="100"
	    android:progress="50"
	    >
	</SeekBar>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_upload_time"
        android:id="@+id/auto_upload_textview"
        />
	<SeekBar
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/auto_upload_seekbar"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
	    android:max="100"
	    android:progress="50"
	    >
	</SeekBar>
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:id="@+id/display_textview"
        />
	<RadioGroup 
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
        android:id="@+id/display_radio_group"
        android:orientation="horizontal"
        android:checkedButton="@+id/display_radio_byWidth"
	    >
	    <RadioButton 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/display_byHeight"
        	android:id="@+id/display_radio_byHeight"
	        />
	    <RadioButton 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp"
        	android:text="@string/display_byWidth"
        	android:id="@+id/display_radio_byWidth"
	        />
	</RadioGroup>
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cali"
        android:id="@+id/cali_textview"
        />
	<RadioGroup 
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
        android:id="@+id/cali_radio_group"
        android:orientation="horizontal"
        android:checkedButton="@+id/cali_a"
	    >
	    <RadioButton 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/cali_a"
        	android:id="@+id/cali_a"
	        />
	    <RadioButton 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp"
        	android:text="@string/cali_b"
        	android:id="@+id/cali_b"
	        />
	</RadioGroup>
	
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_parameters"
        android:id="@+id/display_parameters_textView"
        />
	<LinearLayout 
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
        android:orientation="horizontal"
	    >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/display_parameters_base_pad"
        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:id="@+id/display_parameters_base_pad_textView"
        />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="100dp"
	        android:text="@string/button_add"
	        android:id="@+id/display_parameters_base_pad_add_button"
        />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/button_delete"
	        android:id="@+id/display_parameters_base_pad_delete_button"
        />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="500dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="15dp"
        android:orientation="horizontal"
	    >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/display_parameters_word_pad"
        />
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:id="@+id/display_parameters_word_pad_textView"
        />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="100dp"
	        android:text="@string/button_add"
	        android:id="@+id/display_parameters_word_pad_add_button"
        />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dp"
	        android:text="@string/button_delete"
	        android:id="@+id/display_parameters_word_pad_delete_button"
        />
	</LinearLayout>
	
	
</LinearLayout>